--- a/config.example.yaml
+++ b/config.example.yaml
@@ -2,6 +2,8 @@ max_context_size: 20000 # Maximum context size in tokens, reaching 80% triggers 
 max_capture_lines: 200 # Maximum number of lines to capture during each message
 wait_interval: 5 # Wait interval when exec pane is considered busy (used in observe and watch modes)
 
+agentic_mode: false # Set to true to enable multi-pane command execution and creation
+
 send_keys_confirm: true # Confirm before executing send keys
 paste_multiline_confirm: true # Confirm before pasting multiline content
 exec_confirm: true # Confirm before executing commands
