Update : Add silent file reading for AI
Introduces a new `<ReadFile>` XML tag and backend logic, allowing the AI
to silently read file contents directly into its context. This includes
new configuration options for confirmation and file size limits, and
updates to the AI''s prompts to encourage its use over `cat` commands.
This streamlines AI''s ability to analyze files efficiently.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,6 +8,8 @@ layout: "" # Auto-apply layout on startup (e.g., "1x2"). Requires agentic_mode: 
 send_keys_confirm: true # Confirm before executing send keys
 paste_multiline_confirm: true # Confirm before pasting multiline content
 exec_confirm: true # Confirm before executing commands
+read_file_confirm: true # Confirm before reading files
+max_read_file_size: 250000 # Maximum file size in bytes for reading (250KB default)
 
 # Not only OpenRouter, you can use any OpenAI compatible API
 openrouter:
